syntax = "proto3";

package mikebway.order;

import "google/type/timestamp.proto";
import "mikebway/types/address.proto";
import "mikebway/order/item.proto";
import "mikebway/types/person.proto";

option go_package = "github.com/mikebway/poc-gcp-ecomm/pb/order";

// An order represents the permanent record of what a customer has purchased. An order is derived from a shopping cart
// upon checkout.
message Order {
  // TODO: Add version field (for the schema)

  // A UUID ID in hexadecimal string form - a unique ID for this order.
  // This will be set by the cart when the order is submitted.
  string id = 1;

  // The time at which cart checkout was completed and the order was submitted for payment
  google.protobuf.Timestamp submission_time = 2;

  // The person who submitted the order
  types.Person ordered_by = 3;

  // The delivery address for the order
  types.PostalAddress delivery_address = 4;

  // Order items is the list of one to many items that make up the order
  repeated OrderItem order_items = 5;
}
